test/Fail/WrongNamedArgument.err
WrongNamedArgument.agda:7.8-9: error: [WrongNamedArgument]
Function does not accept argument {B = _} (possible arguments: A)
when checking that {B = Set} is a valid argument to a function of
type {A : Set₁} → A → A
